--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Sample Blog
+name: Your Name
 
 # Short bio or description (displayed in the header)
-description: Carlos Faz repository v0.1
+description: Web Developer from Somewhere
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-#avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
 
 #
 # Flags below are optional
@@ -53,12 +53,10 @@ baseurl: ""
 # !! You don't need to change any of the configuration flags below !!
 #
 
-permalink: /:categories/:title/
+permalink: /:title/
 
 # The release of Jekyll Now that you're using
 version: v1.2.0
-
-markdown: kramdown
 
 # Jekyll 3 now only supports Kramdown for Markdown
 kramdown:
